--- a/src/components/widget/TOC.astro
+++ b/src/components/widget/TOC.astro
@@ -8,7 +8,7 @@ interface Props {
 	headings: MarkdownHeading[];
 }
 
-const { headings = [] } = Astro.props;
+let { headings = [] } = Astro.props;
 
 let minDepth = 10;
 for (const heading of headings) {
@@ -19,7 +19,7 @@ const className = Astro.props.class;
 const isPostsRoute = Astro.url.pathname.startsWith(url("/posts/"));
 
 const removeTailingHash = (text: string) => {
-	const lastIndexOfHash = text.lastIndexOf("#");
+	let lastIndexOfHash = text.lastIndexOf("#");
 	if (lastIndexOfHash !== text.length - 1) {
 		return text;
 	}
@@ -27,7 +27,7 @@ const removeTailingHash = (text: string) => {
 	return text.substring(0, lastIndexOfHash);
 };
 
-const heading1Count = 1;
+let heading1Count = 1;
 
 const maxLevel = siteConfig.toc.depth;
 ---
