Integrate Giscus for comments on posts
Added Giscus comment integration script for discussions.

--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -108,6 +108,25 @@ const jsonLd = {
 
             {licenseConfig.enable && <License title={entry.data.title} slug={entry.slug} pubDate={entry.data.published} class="mb-6 rounded-xl license-container onload-animation"></License>}
 
+
+			<script src="https://giscus.app/client.js"
+			        data-repo="ziyang51571/571fuwariblog"
+			        data-repo-id="R_kgDOQa4IlQ"
+			        data-category="Announcements"
+			        data-category-id="DIC_kwDOQa4Ilc4CzWq2"
+			        data-mapping="pathname"
+			        data-strict="0"
+			        data-reactions-enabled="1"
+			        data-emit-metadata="0"
+			        data-input-position="bottom"
+			        data-theme="preferred_color_scheme"
+			        data-lang="zh-CN"
+			        crossorigin="anonymous"
+			        async>
+			</script>
+
+
+
         </div>
     </div>
 
