Renamed certain cards.
(no description)

--- a/src/pages/tools/index.astro
+++ b/src/pages/tools/index.astro
@@ -36,8 +36,8 @@ const tools = [
 
 		isEasterEgg: true,
 
-		realTitle: "Pictured as Perfect",
-		realDesc: "Outro Generator",
+		realTitle: "Coda Animation Player",
+		realDesc: "Pictured as Perfect",
 		realUrl: "/tools/pap/",
 		realIcon: "💗",
 	},
