--- a/src/pages/tools/pap.astro
+++ b/src/pages/tools/pap.astro
@@ -1,4 +1,10 @@
 ---
+import MainGridLayout from "@layouts/MainGridLayout.astro";
 import content from "./html/pap.html?raw";
 ---
-<Fragment set:html={content} />
+<MainGridLayout title="PaP CAP" hideSideBar={true}>
+  <div slot="top" class="mb-6">
+    <h1 class="text-2xl font-bold">PaP CAP</h1>
+  </div>
+  <Fragment set:html={content} />
+</MainGridLayout>
