--- a/src/pages/tools/lost.astro
+++ b/src/pages/tools/lost.astro
@@ -1,7 +1,7 @@
 
 ---
 import MainGridLayout from "@layouts/MainGridLayout.astro";
-import content from "./html/Top to bottom, right to left..html?raw";
+import content from "./html/lost.html?raw";
 ---
 <MainGridLayout title = "CLUE" hideSideBar={true}>
   <Fragment set:html={content} />
